--- a/Reservia/public_html/mobile/index-mobile.html
+++ b/Reservia/public_html/mobile/index-mobile.html
@@ -17,16 +17,16 @@
                     <div class="logo-picture">
                         <img src="../../images/logo/Reservia.svg">
                     </div>
-                    <div class="inscription">
+                    <div class="inscription title">
                         <a href="#inscrire" id="signin">S'inscrire</a>
                     </div>
                 </div> 
                 <div class="topnav-right">
-                    <div class="topnav-text-hebergement">
-                        <a href="#ancre-hebergements">Hébergements</a>
+                    <div class="topnav-text-hebergement title">
+                        <a href="#ancre-hebergements" class="hebergement-active">Hébergements</a>
                     </div>
-                    <div class="topnav-text-activite">
-                        <a href="#ancre-activites">Activités</a>
+                    <div class="topnav-text-activite title">
+                        <a href="#ancre-activites" class="activite-active">Activités</a>
                     </div>
 
                 </div>
@@ -34,7 +34,7 @@
         </nav>
         <!-- Headers Localisation -->
         <header>
-            <h2 class="header-title">Trouvez votre hèbergement pour des vacances de rêve</h2>
+            <span class="header-title">Trouvez votre hébergement pour des vacances de rêve</span>
             <p class="header-text">En plein centre ville ou en pleine nature</p>
 
             <form action="" method="get" class="container-header">
@@ -42,7 +42,7 @@
                 <div class="container-header">
                     <i class="fas fa-map-marker-alt flex home"></i>
                     <label for="adress-text"></label>
-                    <input type="text" name="adress-text" id="adress-text" placeholder="Marseille,France">
+                    <input type="text" name="adress-text" id="adress-text" class="title" placeholder="Marseille,France">
                     <button class="btn btn-link btn-xs flex rechercher" type="submit" name="action" value="">
                         <i class="fas fa-search"></i>
                     </button>
@@ -51,7 +51,7 @@
             <br>
             <!-- Headers Filtering -->
             <div class="filtre">
-                <div class="filtre-label">
+                <div class="filtre-label title">
                     Filtres
                 </div>
                 <div class="cadre-eco-fam">
@@ -59,24 +59,24 @@
                         <span class="filtre-logo-container">
                             <i class="fas fa-money-bill-wave filtre-logo"></i>
                         </span>
-                        <span class="filtre-text-container">
-                            Economique
+                        <span class="filtre-text-container title">
+                            Économique
                         </span>           
                     </div>
                     <div class="cadre-famille">
                         <span class="filtre-logo-container">
                             <i class="fas fa-child  filtre-logo"></i>
                         </span>
-                        <span class="filtre-text-container">
+                        <span class="filtre-text-container title">
                             Familial
                         </span>        
                     </div>
                 </div>                
-                <div class="cadre">
+                <div class="cadre cadre-romantique">
                     <span class="filtre-logo-container">
                         <i class="fas fa-heart filtre-logo"></i>
                     </span>
-                    <span class="filtre-text-container">
+                    <span class="filtre-text-container title">
                         Romantique
                     </span>                    
                 </div>
@@ -84,7 +84,7 @@
                     <span class="filtre-logo-container">
                         <i class="fas fa-dog filtre-logo"></i>
                     </span>
-                    <span class="filtre-text-container">
+                    <span class="filtre-text-container title">
                         Animaux autorisés
                     </span>                    
                 </div>
@@ -113,8 +113,8 @@
                             <div  class="card-populaire">
                                 <img src="../../images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="populaire-picture" alt="photo hôtel Le soleil du matin">  
 
-                                <h3 class="title-card">Hôtel Le soleil du matin</h3>
-                                <span class="title-card">Nuit à partir de <strong>128€</strong></span>
+                                <span class="title">Hôtel Le soleil du matin</span>
+                                <span class="text-card">Nuit à partir de <strong>128€</strong></span>
                                 <div class="rating-populaire">
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>
@@ -130,8 +130,8 @@
                             <div  class="card-populaire">
                                 <img src="../../images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" class="populaire-picture" alt="photo chambre d'hôtes Au coeur de l'eau">  
 
-                                <h3 class="title-card">Au coeur de l'eau<br>Chambres d'hôtes</h3>
-                                <span class="title-card">Nuit à partir de <strong>71€</strong></span>
+                                <span class="title">Au coeur de l'eau<br>Chambres d'hôtes</span>
+                                <span class="text-card">Nuit à partir de <strong>71€</strong></span>
                                 <div class="rating-populaire">
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>
@@ -147,8 +147,8 @@
                             <div  class="card-populaire">
                                 <img src="../../images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="populaire-picture" alt="photo hôtel Tout bleu et Blanc">  
 
-                                <h3 class="title-card">Hôtel Tout bleu et Blanc</h3>
-                                <span class="title-card">Nuit à partir de <strong>68€</strong></span>
+                                <span class="title">Hôtel Tout bleu et Blanc</span>
+                                <span class="text-card">Nuit à partir de <strong>68€</strong></span>
                                 <div class="rating-populaire">
                                     <span class="fa fa-star checked"></span>
                                     <span class="fa fa-star checked"></span>
@@ -171,8 +171,8 @@
                                 <div class="card-hebergement">
                                     <img src="../../images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="hebergement-picture" alt="photo auberge la Cannebière">
                                     <div class="card-text">
-                                        <h3 class="title-card">Auberge la Cannebière</h3>
-                                        <span class="title-card">Nuit à partir de <strong>25€</strong></span>
+                                        <span class="title">Auberge la Cannebière</span>
+                                        <span class="text-card">Nuit à partir de <strong>25€</strong></span>
                                         <div class="rating-hebergement">
                                             <span class="fa fa-star checked"></span>
                                             <span class="fa fa-star checked"></span>
@@ -190,8 +190,8 @@
                                 <div class="card-hebergement">
                                     <img src="../../images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="hebergement-picture" alt="photo hôtel du port">
                                     <div class="card-text">
-                                        <h3 class="title-card">Hôtel du port</h3>
-                                        <span class="title-card">Nuit à partir de <strong>52€</strong></span>
+                                        <span class="title">Hôtel du port</span>
+                                        <span class="text-card">Nuit à partir de <strong>52€</strong></span>
                                         <div class="rating-hebergement">
                                             <span class="fa fa-star checked"></span>
                                             <span class="fa fa-star checked"></span>
@@ -209,8 +209,8 @@
                                 <div class="card-hebergement">
                                     <img src="../../images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="hebergement-picture" alt="photo hôtel Les mouettes">
                                     <div class="card-text">
-                                        <h3 class="title-card">Hôtel Les mouettes</h3>
-                                        <span class="title-card">Nuit à partir de <strong>76€</strong></span>
+                                        <span class="title">Hôtel Les mouettes</span>
+                                        <span class="text-card">Nuit à partir de <strong>76€</strong></span>
                                         <div class="rating-hebergement">
                                             <span class="fa fa-star checked"></span>
                                             <span class="fa fa-star checked"></span>
@@ -229,8 +229,8 @@
                                 <div class="card-hebergement">
                                     <img src="../../images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="hebergement-picture" alt="photo hôtel de la mer">
                                     <div class="card-text">
-                                        <h3 class="title-card">Hôtel de la mer</h3>
-                                        <span class="title-card">Nuit à partir de <strong>46€</strong></span>
+                                        <span class="title">Hôtel de la mer</span>
+                                        <span class="text-card">Nuit à partir de <strong>46€</strong></span>
                                         <div class="rating-hebergement">
                                             <span class="fa fa-star checked"></span>
                                             <span class="fa fa-star checked"></span>
@@ -248,8 +248,8 @@
                                 <div class="card-hebergement">
                                     <img src="../../images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="hebergement-picture" alt="photo auberge Le Panier">
                                     <div class="card-text">
-                                        <h3 class="title-card">Auberge Le Panier</h3>
-                                        <span class="title-card">Nuit à partir de <strong>23€</strong></span>
+                                        <span class="title">Auberge Le Panier</span>
+                                        <span class="text-card">Nuit à partir de <strong>23€</strong></span>
                                         <div class="rating-hebergement">
                                             <span class="fa fa-star checked"></span>
                                             <span class="fa fa-star checked"></span>
@@ -267,8 +267,8 @@
                                 <div class="card-hebergement">
                                     <img src="../../images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="hebergement-picture" alt="photo hôtel Chez amina">
                                     <div class="card-text">
-                                        <h3 class="title-card">Hôtel chez Amina</h3>
-                                        <span class="title-card">Nuit à partir de <strong>96€</strong></span>
+                                        <span class="title">Hôtel chez Amina</span>
+                                        <span class="text-card">Nuit à partir de <strong>96€</strong></span>
                                         <div class="rating-hebergement">
                                             <span class="fa fa-star checked"></span>
                                             <span class="fa fa-star checked"></span>
@@ -281,21 +281,23 @@
                             </a>
                         </div>
                     </div>
-                    <div><h3 class="afficher-plus">Afficher plus</h3></div>
+                    <div class="afficher-plus">
+                        <span class="title">Afficher plus</span>
+                    </div>
                 </div>
             </section>
             <!-- Section 2: Activités -->
             <section>
                 <div class="box3">
-                    <div>
-                        <h2 class="h2-title" id="ancre-activites">Activités à Marseille</h2>
+                    <div class="activite-title">
+                        <span class="title" id="ancre-activites">Activités à Marseille</span>
                     </div>
                     <div class="row-activite-container"> 
                         <div class="card-vieux-port">
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
                                     <img src="../../images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="activite-picture picture-large" alt="photo Vieux Port">
-                                    <span class="text-activite">Vieux Port</span> 
+                                    <span class="text-activite title">Vieux Port</span> 
                                 </div>
                             </a>
                         </div>
@@ -303,7 +305,7 @@
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
                                     <img src="../../images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  class="activite-picture picture-large" alt="photo Fort de Pomègues">
-                                    <span class="text-activite">Fort de Pomègues</span> 
+                                    <span class="text-activite title">Fort de Pomègues</span> 
                                 </div>
                             </a>
                         </div>
@@ -311,7 +313,7 @@
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
                                     <img src="../../images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="activite-picture picture-large" alt="photo Iles du Frioul">
-                                    <span class="text-activite">Îles du Frioul</span> 
+                                    <span class="text-activite title">Îles du Frioul</span> 
                                 </div>
                             </a>
                         </div>  
@@ -319,7 +321,7 @@
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
                                     <img src="../../images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="activite-picture picture-large" alt="photo Parc National des Calanques">
-                                    <span class="text-activite">Parc National des Calanques</span> 
+                                    <span class="text-activite title">Parc National des Calanques</span> 
                                 </div>
                             </a>
                         </div>
@@ -327,7 +329,7 @@
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
                                     <img src="../../images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"  class="activite-picture picture-large" alt="photo Notre Dame de la Garde">
-                                    <span class="text-activite">Notre-Dame-de-la-Garde</span> 
+                                    <span class="text-activite title">Notre-Dame-de-la-Garde</span> 
                                 </div>
                             </a>  
                         </div>
@@ -335,7 +337,7 @@
                             <a href="#" class="clic-card">
                                 <div class="card-activite">
                                     <img src="../../images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="activite-picture picture-large" alt="photo Parc Longhcamp">
-                                    <span class="text-activite">Parc LongChamp</span> 
+                                    <span class="text-activite title">Parc LongChamp</span> 
                                 </div>
                             </a>  
                         </div>
@@ -348,18 +350,18 @@
         <footer>
             <div class="box4">
                 <div class="footer-propos">
-                    <h2> A propos</h2>
+                    <span class="title"> A propos</span>
                     <p>Fonctionnement du site</p>
                     <p>Conditions générales de vent</p>
                     <p>Données et confidentialité</p>                
                 </div>
                 <div class="footer-hebergement">
-                    <h2>Nos hébergements</h2>
+                    <span class="title">Nos hébergements</span>
                     <p>Charte qualité</p>
                     <p>Soumettre votre hôtel</p>
                 </div>
                 <div class="footer-assistance">
-                    <h2>Assistance</h2>
+                    <span class="title">Assistance</span>
                     <p>Centre d'aide</p>
                     <p>Nous contacter</p>
                 </div>
