--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- Headers Localisation -->
         <div class="page-container">
             <header>
-                <span class="header-title">Trouvez votre hébergement pour des vacances de rêve</span>
+                <h1 class="header-title">Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p class="header-text">En plein centre ville ou en pleine nature</p>
 
                 <form action="" method="get">
@@ -105,7 +105,7 @@
                     <!-- Box2 : Populaires -->
                     <div class="box2">
                         <div>
-                            <span class="h2-title-populaire title">Les plus populaires</span>                       
+                            <h2 class="h2-title-populaire title">Les plus populaires</h2>                       
                             <i class="fas fa-chart-line chart-logo"></i>
                         </div>
                         <div class="row-hebergement-2">
@@ -113,7 +113,7 @@
                                 <div  class="card-populaire">
                                     <img src="images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" class="populaire-picture" alt="photo hôtel Le soleil du matin">  
 
-                                    <span class="title">Hôtel Le soleil du matin</span>
+                                    <h3 class="title">Hôtel Le soleil du matin</h3>
                                     <span class="text-card-populaire">Nuit à partir de <strong>128€</strong></span>
                                     <div class="rating-populaire-soleil">
                                         <span class="fa fa-star checked"></span>
@@ -130,7 +130,7 @@
                                 <div  class="card-populaire">
                                     <img src="images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" class="populaire-picture" alt="photo chambre d'hôtes Au coeur de l'eau">  
 
-                                    <span class="title">Au coeur de l'eau<br>Chambres d'hôtes</span>
+                                    <h3 class="title">Au coeur de l'eau<br>Chambres d'hôtes</h3>
                                     <span class="text-card-populaire">Nuit à partir de <strong>71€</strong></span>
                                     <div class="rating-populaire-chambre">
                                         <span class="fa fa-star checked"></span>
@@ -147,7 +147,7 @@
                                 <div  class="card-populaire">
                                     <img src="images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" class="populaire-picture" alt="photo hôtel Tout bleu et Blanc">  
 
-                                    <span class="title">Hôtel Tout bleu et Blanc</span>
+                                    <h3 class="title">Hôtel Tout bleu et Blanc</h3>
                                     <span class="text-card-populaire">Nuit à partir de <strong>68€</strong></span>
                                     <div class="rating-populaire-bleu">
                                         <span class="fa fa-star checked"></span>
@@ -163,7 +163,7 @@
                     <!-- Box1 : Hebergements -->
                     <div class="box1">
                         <div>
-                            <span class="title" id="ancre-hebergements">Hébergements à Marseille</span>
+                            <h2 class="title" id="ancre-hebergements">Hébergements à Marseille</h2>
                         </div>
                         <div class="row-hebergement-1">
                             <div class="column-hebergement">
@@ -171,7 +171,7 @@
                                     <div class="card-hebergement">
                                         <img src="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" class="hebergement-picture" alt="photo auberge la Cannebière">
                                         <div class="card-text">
-                                            <span class="title">Auberge la Cannebière</span>
+                                            <h3 class="title">Auberge la Cannebière</h3>
                                             <span class="text-card">Nuit à partir de <strong>25€</strong></span>
                                             <div class="rating-hebergement">
                                                 <span class="fa fa-star checked"></span>
@@ -190,7 +190,7 @@
                                     <div class="card-hebergement">
                                         <img src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="hebergement-picture" alt="photo hôtel du port">
                                         <div class="card-text">
-                                            <span class="title">Hôtel du port</span>
+                                            <h3 class="title">Hôtel du port</h3>
                                             <span class="text-card">Nuit à partir de <strong>52€</strong></span>
                                             <div class="rating-hebergement">
                                                 <span class="fa fa-star checked"></span>
@@ -209,7 +209,7 @@
                                     <div class="card-hebergement">
                                         <img src="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="hebergement-picture" alt="photo hôtel Les mouettes">
                                         <div class="card-text">
-                                            <span class="title">Hôtel Les mouettes</span>
+                                            <h3 class="title">Hôtel Les mouettes</h3>
                                             <span class="text-card">Nuit à partir de <strong>76€</strong></span>
                                             <div class="rating-hebergement">
                                                 <span class="fa fa-star checked"></span>
@@ -229,7 +229,7 @@
                                     <div class="card-hebergement">
                                         <img src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="hebergement-picture" alt="photo hôtel de la mer">
                                         <div class="card-text">
-                                            <span class="title">Hôtel de la mer</span>
+                                            <h3 class="title">Hôtel de la mer</h3>
                                             <span class="text-card">Nuit à partir de <strong>46€</strong></span>
                                             <div class="rating-hebergement">
                                                 <span class="fa fa-star checked"></span>
@@ -248,7 +248,7 @@
                                     <div class="card-hebergement">
                                         <img src="images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" class="hebergement-picture" alt="photo auberge Le Panier">
                                         <div class="card-text">
-                                            <span class="title">Auberge Le Panier</span>
+                                            <h3 class="title">Auberge Le Panier</h3>
                                             <span class="text-card">Nuit à partir de <strong>23€</strong></span>
                                             <div class="rating-hebergement">
                                                 <span class="fa fa-star checked"></span>
@@ -267,7 +267,7 @@
                                     <div class="card-hebergement">
                                         <img src="images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" class="hebergement-picture" alt="photo hôtel Chez amina">
                                         <div class="card-text">
-                                            <span class="title">Hôtel chez Amina</span>
+                                            <h3 class="title">Hôtel chez Amina</h3>
                                             <span class="text-card">Nuit à partir de <strong>96€</strong></span>
                                             <div class="rating-hebergement">
                                                 <span class="fa fa-star checked"></span>
@@ -290,14 +290,14 @@
                 <section>
                     <div class="box3">
                         <div class="activite-title">
-                            <span class="title" id="ancre-activites">Activités à Marseille</span>
+                            <h2 class="title" id="ancre-activites">Activités à Marseille</h2>
                         </div>
                         <div class="row-activite-container"> 
                             <div class="card-vieux-port">
                                 <a href="#" class="clic-card">
                                     <div class="card-activite">
                                         <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="activite-picture picture-large"  alt="photo Vieux Port">
-                                        <span class="text-activite title">Vieux Port</span> 
+                                        <h3 class="text-activite title">Vieux Port</h3> 
                                     </div>
                                 </a>
                             </div>
@@ -305,7 +305,7 @@
                                 <a href="#" class="clic-card">
                                     <div class="card-activite">
                                         <img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  class="activite-picture picture-medium" alt="photo Fort de Pomègues">
-                                        <span class="text-activite title">Fort de Pomègues</span> 
+                                        <h3 class="text-activite title">Fort de Pomègues</h3> 
                                     </div>
                                 </a>
                             </div>
@@ -313,7 +313,7 @@
                                 <a href="#" class="clic-card">
                                     <div class="card-activite">
                                         <img src="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" class="activite-picture picture-small" alt="photo Iles du Frioul">
-                                        <span class="text-activite title">Îles du Frioul</span> 
+                                        <h3 class="text-activite title">Îles du Frioul</h3> 
                                     </div>
                                 </a>
                             </div>  
@@ -321,7 +321,7 @@
                                 <a href="#" class="clic-card">
                                     <div class="card-activite">
                                         <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="activite-picture picture-large" alt="photo Parc National des Calanques">
-                                        <span class="text-activite title">Parc National des Calanques</span> 
+                                        <h3 class="text-activite title">Parc National des Calanques</h3> 
                                     </div>
                                 </a>
                             </div>
@@ -329,7 +329,7 @@
                                 <a href="#" class="clic-card">
                                     <div class="card-activite">
                                         <img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"  class="activite-picture picture-medium" alt="photo Notre Dame de la Garde">
-                                        <span class="text-activite title">Notre-Dame-de-la-Garde</span> 
+                                        <h3 class="text-activite title">Notre-Dame-de-la-Garde</h3> 
                                     </div>
                                 </a>  
                             </div>
@@ -337,7 +337,7 @@
                                 <a href="#" class="clic-card">
                                     <div class="card-activite">
                                         <img src="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" class="activite-picture picture-medium" alt="photo Parc Longhcamp">
-                                        <span class="text-activite title">Parc LongChamp</span> 
+                                        <h3 class="text-activite title">Parc LongChamp</h3> 
                                     </div>
                                 </a>  
                             </div>
@@ -351,18 +351,18 @@
         <footer>
             <div class="box4">
                 <div class="footer-propos">
-                    <span class="title"> A propos</span>
+                    <h2 class="title"> A propos</h2>
                     <p>Fonctionnement du site</p>
                     <p>Conditions générales de vent</p>
                     <p>Données et confidentialité</p>                
                 </div>
                 <div class="footer-hebergement">
-                    <span class="title">Nos hébergements</span>
+                    <h2 class="title">Nos hébergements</h2>
                     <p>Charte qualité</p>
                     <p>Soumettre votre hôtel</p>
                 </div>
                 <div class="footer-assistance">
-                    <span class="title">Assistance</span>
+                    <h2 class="title">Assistance</h2>
                     <p>Centre d'aide</p>
                     <p>Nous contacter</p>
                 </div>
